# votestat

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
dal/: Cargo.toml
dal/migrations/: 01_super_districts.sql  02_districts.sql
dal/src/: database.rs  entities.rs  lib.rs
dal/src/database/: mod.rs
dal/src/models/: district.rs  mod.rs
dal/src/repository/: create_super_district.rs  mod.rs
dal/src/service/: create_super_district.rs  mod.rs
database/: Cargo.toml
database/src/: database.rs  lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/elections/: dto.rs  entity.rs  mod.rs  service.rs
domain/src/voting_districts/: dto.rs  entity.rs  mod.rs  service.rs
entity/src/: districts.rs  elections.rs  mod.rs  prelude.rs  super_districts.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230101_000001_create_elections_table.rs
migrations/: 01_super_districts.sql
scraping/: Cargo.toml
scraping/src/: download.rs  lib.rs
scraping/src/kmd/: mod.rs
scraping/src/kmd_provider/: mod.rs
scraping/src/kmd_provider/stubs/: kmd-main.html
src/: lib.rs  main.rs
src/database/: mod.rs
src/models/: mod.rs
src/navigation/: main_menu.rs
src/scraping/: mod.rs
src/scraping/kmd/: mod.rs
src/scraping/kmd/stubs/: kmd-main.html
utils/: Cargo.toml
utils/src/: lib.rs
votestat/: Cargo.toml
votestat/src/: main.rs
votestat/src/navigation/: main_menu.rs
