[package]
name = "votestat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
inquire = "0.5.2"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite"
] }
