[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
anyhow = "1.0"
