[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "domain"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4"
anyhow = "1.0"
async-trait = "0.1"
uuid = "1.2"
ulid = { version = "1.0", features = [
    "uuid"
] }