[package]
name = "votestat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
dal = { path = "../dal" }
scraping = { path = "../scraping" }
tokio = { version = "1", features = ["full"] }
inquire = "0.5.2"
anyhow = "1.0"
dotenvy = "0.15"
